--- a/MvcPWy/TheSecondHomeMVC.csproj
+++ b/MvcPWy/TheSecondHomeMVC.csproj
@@ -197,6 +197,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\popup.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -296,6 +297,7 @@
     <Content Include="Views\Home\SupportServices.cshtml" />
     <Content Include="Views\Home\EmailHelper.cshtml" />
     <Content Include="Views\Home\ChatHub.cshtml" />
+    <Content Include="Views\Home\EmailHelp.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
